# llm-agents-for-smartcities-paper

./: .gitignore  Dockerfile  README.md  launch_llama.py  llama-notebook.ipynb  main.py  pyproject.toml  requirements.txt  test_build.sh  web_api_test.py
.github/workflows/: build_and_launch_test.yml  code_quality_check.yml  connect_to_vpn.yml  run_tests.yml
agents/: agent.py  prompts.py
agents/tools/: accessibility_tools.py  pipeline_tools.py
api/: api.py  api_tables.py  basic_requests.py  endpoint.py  indicators_requests.py  request_example.py  summary_tables_requests.py
api/test_data/: blocks.py  cities.py  districts.py  houses.py  municipalities.py
api/utils/: coords_typer.py
chroma_rag/: README.md  loading.py
chroma_rag/docs/: example.docx  strategy.docx
docker/app/: Dockerfile
docker/chroma/: compose.yaml
documents/: cities-RAG.ipynb  llm_notebooks_examples.ipynb  llm_notebooks_examples2.ipynb
experiments/: llama-notebook.ipynb
experiments/utils/: utils.py
models/: api_chooser.py  connectors.py  definitions.py  launch_llama.py  model.py  new_web_api.py  pipeline_chooser.py  standard_prompt.py  vsegpt_api.py  web_api.py  web_api_test.py
models/prompts/: buildings_prompt.py  strategy_prompt.py
modules/: definitions.py  model.py  web_api.py
modules/evaluation/: metrics_evaluation.py
modules/models/: api_chooser.py  connectors.py  (+8 more)
pipelines/: accessibility_data_agent.py  accessibility_pipeline.py  master_pipeline.py  pipeline_test.py  strategy_pipeline.py
tests/: test_connectors.py
utils/: get_logs.py  logging_config.py  utils.py
(+85 files in other folders)
