[tool.poetry]
package-mode = false

[virtualenvs]
create = false
prefer-active-python = true

[tool.poetry.dependencies]
python = "^3.10,<3.12"
langchain = "^0.1.12"
pandas = "^2.2.1"
sortedcontainers = "^2.4.0"
langchain-experimental = "^0.0.55"
sentence-transformers = "^2.6.1"
pydantic-settings = "^2.2.1"
chromadb = "^0.5.0"
pytest = "^8.2.0"
